🎁 Tidy weird layout bugs

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -229,7 +229,8 @@ html {
 // Silent classes
 // ********
 
-%clearfix {
+%clearfix,
+.clearfix {
   content: "";
   display: table;
   clear: both;
